--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -15,7 +15,7 @@
       "variables": [
         {
           "name": "CMAKE_TOOLCHAIN_FILE",
-          "value": "${env.CMAKE_TOOLCHAIN_FILE}\\scripts\\buildsystems\\vcpkg.cmake"
+          "value": "C:\\Users\\Developer\\Documents\\Project Library\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake"
         }
       ]
     },
@@ -35,7 +35,7 @@
       "variables": [
         {
           "name": "CMAKE_TOOLCHAIN_FILE",
-          "value": "${env.CMAKE_TOOLCHAIN_FILE}\\scripts\\buildsystems\\vcpkg.cmake"
+          "value": "C:\\Users\\Developer\\Documents\\Project Library\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake"
         }
       ]
     }
