--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,9 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-  set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake"
-      CACHE STRING "")
-endif()
-
 project ("CMake_Trello2Monthly")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 # Include sub-projects.
 add_subdirectory ("CMake_Trello2Monthly")
