add cpp and h file

--- a/CMake_Trello2Monthly/CMakeLists.txt
+++ b/CMake_Trello2Monthly/CMakeLists.txt
@@ -3,7 +3,9 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
+
 # Add source to this project's executable.
+set(SOURCES monthly.cpp monthly.h)
 add_executable (CMake_Trello2Monthly "CMake_Trello2Monthly.cpp" "CMake_Trello2Monthly.h")
 find_package(cpprestsdk REQUIRED)
 target_link_libraries(CMake_Trello2Monthly PRIVATE cpprestsdk::cpprest)
