--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,9 @@
 cmake_minimum_required (VERSION 3.8)
 
 project ("CMake_Trello2Monthly")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 # Include sub-projects.
 add_subdirectory ("CMake_Trello2Monthly")
