--- a/CMake_Trello2Monthly/CMakeLists.txt
+++ b/CMake_Trello2Monthly/CMakeLists.txt
@@ -3,10 +3,6 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-
 # Add source to this project's executable.
 set(SOURCES monthly.cpp monthly.h)
 add_executable (CMake_Trello2Monthly "CMake_Trello2Monthly.cpp" "CMake_Trello2Monthly.h" "monthly.cpp" "monthly.cpp")
@@ -14,4 +10,10 @@ find_package(cpprestsdk REQUIRED)
 target_link_libraries(CMake_Trello2Monthly PRIVATE cpprestsdk::cpprest)
 find_package(spdlog CONFIG REQUIRED)
 target_link_libraries(CMake_Trello2Monthly PRIVATE spdlog::spdlog)
+
+set_target_properties(CMake_Trello2Monthly PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED ON
+    CXX_EXTENSIONS OFF
+)
 # TODO: Add tests and install targets if needed.
